[gd_scene load_steps=8 format=1]

[ext_resource path="res://leaf/leaf.gd" type="Script" id=1]
[ext_resource path="res://leaf/other_other_leaf.tex" type="Texture" id=2]
[ext_resource path="res://leaf/shadow.tex" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]

custom_solver_bias = 0.0
radius = 35.0
height = 30.0

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 30.0

[node name="leaf" type="Node2D"]

script/script = ExtResource( 1 )

[node name="leaf_sprite" type="AnimatedSprite" parent="."]

transform/scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "default"

[node name="leaf_area" type="Area2D" parent="."]

transform/scale = Vector2( 0.5, 0.5 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 0.707107, 0.707107, -0.707107, 0.707107, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="leaf_area"]

transform/rot = -45.0
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="shadow_sprite" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 0, 6 )
transform/scale = Vector2( 3, 3 )
z/z = -5
z/relative = false
frames = SubResource( 4 )
animation = "default"

[node name="shadow_area" type="Area2D" parent="."]

editor/display_folded = true
visibility/visible = false
transform/scale = Vector2( 0.3, 0.3 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="shadow_area"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="rake_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.25
one_shot = true
autostart = false


